# PlatinumEngine

./: .gitignore  CMakeLists.txt
Assets/: AssetDatabase.csv  AssetsDatabase.txt  Default.scene  DefaultWithAnimations.scene  DefaultWithParticles.scene  DefaultWithPhysics.scene  FireScene.scene  FunPhysics.scene  FunPhysicsWithChicken.scene  Multiple_animations.scene  NewFunPhysics.scene  PlatformGame.scene  SadNormalMaps.scene  Scene.scene  TestScene.scene
Assets/Medeival/Meshes/: BenchV1.fbx  EmbersV1.fbx  PlateV2.fbx  TableV2.fbx  candlestick_wall.fbx  chandelier.fbx
Assets/Meshes/: Astronaut.fbx  Chicken.fbx  Cuboid1x6x1.fbx  Hat.fbx  PartyMonster01.fbx  PartyMonster02.fbx
Assets/Meshes/Video/: Waste-Bin_Type23.FBX
Assets/Scenes/: AnimationDemo.scene  Chandelier.scene  Default.scene  DefaultWithParticles.scene  DemoParticleEffects.scene  EmptyScene.scene  ExplosionDemo.scene  FirePit.scene  FunPhysics.scene  Game.scene  GameWithDayNightCycle.scene  LowPolyScene.scene  MedievalTablescene.scene  MultiLightScene.scene  MultipleLightScene.scene  Multiple_animations.scene  NightTimeCampScene.scene  PlatformGame.scene  ShadowScene.scene  Show_attachment.scene  SingleLightScene.scene  TestScenePhysics.scene
CMake Subfolders/ImGui CMake/: CMakeLists.txt
CMake Subfolders/ImPlot CMake/: CMakeLists.txt
CMake Subfolders/SDL2Mixer CMake/: CMakeLists.txt
Fonts/: IconsFontAwesome6.h  IconsKenney.h  IconsMaterialDesign.h
ImGui CMake/: CMakeLists.txt
ImPlot CMake/: CMakeLists.txt
Include/: Application.h
Include/Animation/: Animation.h  AnimationLocalTimer.h  AnimationManager.h  BoneNode.h
Include/AssetDatabase/: AssetDatabase.h  AssetHelper.h
Include/Audio/: AudioClip.h  custom_mix_pitch.h  custom_mix_pitch_callback.h
Include/Common/: Load.h
Include/ComponentComposition/: AnimationAttachment.h  AnimationComponent.h  AudioComponent.h  BoxCollider.h  Camera.h  CameraComponent.h  CapsuleCollider.h  Collider.cpp  Collider.h  Color.h  Component.h  ComponentType.h  GameObject.h  Light.h  LightComponent.h  MeshRender.h  Objects.h  ParticleEffect.h  RenderComponent.h  RigidBody.h  SphereCollider.h  Transform.h  TransformComponent.h
Include/ComponentComposition/GameObjectComponentTemplates/: ComponentWithoutTemplates.h  GameObjectComponentWithTemplates.h  GameObjectWithoutTemplates.h
Include/ExampleGame/: Player.h
Include/GameWindow/: GameWindow.h
Include/Helpers/: CircularBuffer.h  Time.h  VectorHelpers.h
Include/IDSystem/: IDSystem.h
Include/InputManager/: InputManager.h
Include/Inspector/: Bezier.h  InspectorWindow.h  Spectrum.h
Include/Loaders/: LoaderCommon.h  MeshLoader.h
Include/Logger/: Logger.h
Include/Maths/: Common.h  Matrices.h  Quaternion.h  Vectors.h
Include/OpenGL/: Framebuffer.h  GLCheck.h  GLEnumInfo.h  Material.h  Mesh.h  ShaderInput.h  ShaderProgram.h  Texture.h  Vertex.h
Include/ParticleEffects/: Particle.h  ParticleEmitter.h  ParticleRenderer.h
Include/Physics/: Collision.h  Physics.h
Include/PlatformingGame/: DayNightCycle.h  Player.h
Include/Profiler/: Profiler.h
Include/Project/: ProjectWindow.h
Include/RasterRenderer/: Camera.h  EditorCamera.h  RasterRenderer.h  Renderer.h
Include/Renderer/: Renderer.h
Include/SceneEditor/: EditorCamera.h  InputManagerExtend.h  SceneEditor.h
Include/SceneManager/: HierarchyWindow.h  Scene.h  SceneManager.h  SceneWithTemplates.h
Include/Serialization/: Collection.h  Serialization.h  VectorCollection.h
Include/ShaderInput/: GL_Utility.h  ShaderInput.h
Include/Shaders/Lit/: NormalMappingFragShader.frag  PBR.frag  Phong.frag  (+3 more)
Include/TypeDatabase/: Collection.h  TypeDatabase.h  VectorCollection.h
Include/WindowManager/: Filedialog.h  WindowManager.h
SDL2Mixer CMake/: CMakeLists.txt
Source/: Application.cpp  InputMain.cpp  Logger.cpp  Logger.h  RTTI_Scratch.cpp  main.cpp
Source/Animation/: Animation.cpp  AnimationLocalTimer.cpp  AnimationManager.cpp  BoneNode.cpp
Source/AssetDatabase/: AssetDatabase.cpp  AssetHelper.cpp
Source/Audio/: AudioClip.cpp  custom_mix_pitch.cpp
Source/Common/: Load.cpp
Source/ComponentComposition/: AnimationAttachment.cpp  AnimationComponent.cpp  AudioComponent.cpp  BoxCollider.cpp  Camera.cpp  CameraComponent.cpp  CapsuleCollider.cpp  Collider.cpp  Color.cpp  Component.cpp  ComponentType.cpp  GameObject.cpp  Light.cpp  LightComponent.cpp  MeshRender.cpp  Objects.cpp  ParticleEffect.cpp  RenderComponent.cpp  RigidBody.cpp  SphereCollider.cpp  Transform.cpp  TransformComponent.cpp
Source/ExampleGame/: Player.cpp
Source/GameWindow/: GameWindow.cpp
Source/IDSystem/: IDSystem.cpp
Source/InputManager/: InputManager.cpp
Source/Inspector/: InspectorWindow.cpp
Source/Loaders/: LoaderCommon.cpp  MeshLoader.cpp
Source/Logger/: Logger.cpp
Source/Maths/: Common.cpp  Matrices.cpp  Quaternion.cpp  Vectors.cpp
Source/OpenGL/: Framebuffer.cpp  GLCheck.cpp  GLEnumInfo.cpp  Material.cpp  Mesh.cpp  ShaderInput.cpp  ShaderProgram.cpp  Texture.cpp
Source/ParticleEffects/: ParticleEmitter.cpp  ParticleRenderer.cpp
Source/Physics/: Collision.cpp  Physics.cpp
Source/PlatformingGame/: DayNightCycle.cpp  Player.cpp
Source/Profiler/: Profiler.cpp
Source/Project/: ProjectWindow.cpp
Source/RasterRenderer/: Camera.cpp  EditorCamera.cpp  RasterRenderer.cpp  Renderer.cpp
Source/Renderer/: Renderer.cpp
Source/SceneEditor/: EditorCamera.cpp  InputManagerExtend.cpp  SceneEditor.cpp
Source/SceneManager/: HierarchyWindow.cpp  Scene.cpp  SceneManager.cpp
Source/Serialization/: Serialization.cpp
Source/ShaderInput/: GL_Utility.cpp  ShaderInput.cpp
Source/TypeDatabase/: TypeDatabase.cpp  TypeDatabaseInit.cpp
Source/WindowManager/: Filedialog.cpp  WindowManager.cpp
Test/: TestScene.cpp  TestShaderInput.cpp  TestTemplate.cpp
Test/IDSystem/: TestIDSystem.cpp
Test/Maths/: MatricesTest.cpp  VectorsTest.cpp
Test/SceneEditor/: EditorCameraTest.cpp
Test/Serialization/: TestSerialization.cpp
Test/TypeDatabase/: TestTypeDatabase.cpp
lib/ImGuiFileDialog/: ImGuiFileDialog.cpp  ImGuiFileDialog.h
stb CMake/: CMakeLists.txt
(+19 files in other folders)
